
package mysql;

message tb_npc{
    required uint32 id = 1;
    required string costom_id = 2;
    required string name = 3;
    required string lable_name = 4;
    required string collectively_called = 5;
    required uint32 sex = 6;
    required uint32 level = 7;
    required int32 is_activity = 8;
    required uint32 soul_code = 9;
    required uint32 base_life_attr = 10;
    required uint32 group_code = 11;
    required uint32 chase_range = 12;
    required uint32 attack_type = 13;
    required uint32 active_attack_range = 14;
    required uint32 character_type = 15;
    required uint32 appe_code = 16;
    required uint32 appearance_code = 17;
    required uint32 feature_code = 18;
    required string feature_desc = 19;
    required string default_lines = 20;
    required uint32 patrol_rules = 21;
    required uint32 revi_code = 22;
    required uint32 revi_sec = 23;
    required uint32 ref_code = 24;
    required uint32 lmt_ref_lv = 25;
    required uint32 ref_scene_id = 26;
    required uint32 ref_npc_id = 27;
    required string schedule_time_rule = 28;
    required uint32 max_refresh_num = 29;
    required uint32 max_normal_lose_num = 30;
    required uint32 min_normal_lose_num = 31;
    required string feature_list = 32;
    required uint32 ai_type = 33;
    required uint32 pvp_fame = 34;
    required uint32 load_type = 35;
    required uint32 height = 36;
    required uint32 exp_rate = 37;
    required uint32 auto_effects_id_1 = 38;
    required uint32 trig_effects_1_odds = 39;
    required uint32 trig_effects_1_mulriple = 40;
    required uint32 auto_effects_id_2 = 41;
    required uint32 trig_effects_2_odds = 42;
    required uint32 trig_effects_2_mulriple = 43;
    required uint32 auto_effects_id_3 = 44;
    required uint32 trig_effects_3_odds = 45;
    required uint32 trig_effects_3_mulriple = 46;
    required uint32 passive_effects_id_4 = 47;
    required uint32 trig_effects_4_odds = 48;
    required uint32 trig_effects_4_mulriple = 49;
    required uint32 passive_effects_id_5 = 50;
    required uint32 trig_effects_5_odds = 51;
    required uint32 trig_effects_5_mulriple = 52;
    required uint32 other_effects_id_6 = 53;
    required uint32 trig_effects_6_odds = 54;
    required uint32 trig_effects_6_mulriple = 55;
    required uint32 is_break = 56;
    required uint32 is_notice = 57;
    required uint32 is_notice_death = 58;
    required string icon_path = 59;
    required string appe_path = 60;
    required string pop_bust_img = 61;
    required string ani_bust_img = 62;
    required string body_img = 63;
    required string walk_img = 64;
    required string run_img = 65;
    required string war_img = 66;
    required string fly_img = 67;
    required string die_img = 68;
    required string seat_img = 69;
    required string attack_img = 70;
    required string beattack_img = 71;
    required string created_date = 72;
    required string last_modified_date = 73;
    required uint32 status = 74;
    required string remark = 75;
}
